--- a/index.html
+++ b/index.html
@@ -18,7 +18,51 @@
         </div>
     </header>
     <main>
-           
+        <section class="main-section">
+            <div class="main-first-part main-part">
+                <div>
+                    <img src="images/person.png" alt="">
+                </div>
+                <div class="failure-blog">
+                    <h3 class="primary-title">My failures of previous year</h3>
+                    <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.  
+                    </p>
+                    <ul class="popular-list">
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                    </div>
+            </div>
+            <div class="plan-section main-part">
+                <h3 class="primary-title">My Plans</h3>
+                <ul class="plan-list">
+                    <li>
+                        <img src="images/icons/web.png" alt="">
+                        <h4 class="plan-title">Web Development</h4>
+                        <p class="plan-description">I want to start</p>
+                    </li>
+                    <li>
+                        <img src="images/icons/js.png" alt="">
+                        <h4 class="plan-title">Javascript</h4>
+                        <p class="plan-description">I want to start</p>
+                    </li>
+                    <li>
+                        <img src="images/icons/smoke.png" alt="">
+                        <h4 class="plan-title">Smoking Habit</h4>
+                        <p class="plan-description">I want to start</p>
+                    </li>
+                    <li>
+                        <img src="images/icons/ecom.png" alt="">
+                        <h4 class="plan-title">ecommerce</h4>
+                        <p class="plan-description">I want to start</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
