--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                     </li>
                 </ul>
             </div>
+            <div class="main-part call-part">
+                <h3>Awlays keep a positive mindset</h3>
+                <button class="btn-primary">Call Now</button>
+            </div>
+            </div>
         </section>
     </main>
     <footer>
