--- a/index.html
+++ b/index.html
@@ -70,7 +70,35 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-container">
+            <div class="social-column">
+                <h3 class="future-title">Future</h3>
+                <p>
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words
+                </p>
+                <p>
+                    Email : info@gmail.com
+                </p>
+                <p>
+                    Phone : 01500 00 00 00
+                </p>
+                <ul>
+                    <li><img src="images/icons/fb.png" alt=""></li>
+                    <li><img src="images/icons/twitter.png" alt=""></li>
+                    <li><img src="images/icons/youtube.png" alt=""></li>
+                </ul>
+            </div>
+            <div class="form-column">
+                <h3>Subscribe</h3>
+                <form action="">
+                    <input id="email" type="email" name="email" placeholder="Enter your email">
+                    <input id="submit" type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+        
     </footer>
 </body>
 </html>
