update pc check

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <li>Contrary to popular , is not simply.</li>
                         <li>Contrary to popular belief, is not simply.</li>
                         <li>Contrary to popular simply.</li>
+                        <li>Change by 1st pc</li>
                     </ul>
                     </div>
             </div>
