2nd pc another project

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <li>Contrary to popular belief, is not simply.</li>
                         <li>Contrary to popular simply.</li>
                         <li>Change by 1st pc</li>
+                        <li>Connect 2nd pc</li>
                     </ul>
                     </div>
             </div>
